--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page</title>
+    <!-- You can link a stylesheet here if needed -->
+    <!-- <link rel="stylesheet" href="style.css"> -->
+</head>
+<body>
+
+    <h1>battery calculator</h1>
+    <p>Please complete the fields below.</p>
+
+    <!-- The form element starts here -->
+    <form action="#" method="POST">
+
+        <!-- A section for user information -->
+        <section>
+            <h2>Battery Information</h2>
+            <div>
+                <label for="name">Capacity:</label>
+                <input type="text" id="bat_cap" name="bat_cap" required defaults="75000">
+            </div>
+            <div>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="user_email">
+            </div>
+        </section>
+
+        <!-- A section for payment information (example) -->
+        <section>
+            <h2>Payment Information</h2>
+            <div>
+                <label for="card">Card Type:</label>
+                <select id="card" name="user_card">
+                    <option value="visa">Visa</option>
+                    <option value="mc">Mastercard</option>
+                    <option value="amex">Amex</option>
+                </select>
+            </div>
+            <div>
+                <label for="card_num">Card Number:</label>
+                <input type="text" id="card_num" name="card_number">
+            </div>
+        </section>
+
+        <!-- A button to submit the form -->
+        <div>
+            <button type="submit">Submit Form</button>
+        </div>
+    </form>
+
+</body>
+</html>
